--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <script src="darbs.js"></script>
-        <link href="noformet.css">
+        <link type="stylesheet"href="noformet.css">
     </head>
     <body>
 
