--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
     <head>
         <script src="darbs.js"></script>
-        <link type="stylesheet" href="noformet.css">
+        <link rel="stylesheet" href="noformet.css">
     </head>
     <body>
-
+        <div class="galva">
+            <h1>Ziema</h1>
+            <p>Ziemas apraksts</p>
+          </div>
     </body>
 </html>
